SOLR-6058: fix anchor alignment (patch from Fran)
git-svn-id: https://svn.apache.org/repos/asf/lucene/cms/branches/solr_6058@1634664 13f79535-47bb-0310-9956-ffa450edef68

--- a/content/solr/assets/styles/base.css
+++ b/content/solr/assets/styles/base.css
@@ -30,6 +30,13 @@ code, pre {
   outline: 0;
 }
 
+.offset {
+  position: relative;
+  top: -150px;
+  padding-top: 150px;
+  margin-bottom: -120px;
+}
+
 a.btn, button {
   border: 1px solid #d1d3d4;
   background-color:inherit;
@@ -682,6 +689,8 @@ section.list ul li p {
   padding-right: 30px;
   padding-left: 15px;
   border-right:1px solid #e4e2dd;
+  position: relative;
+  z-index: 2000;
 }
 
 .codehilite {
